http-service-on-k8s/develop-demo-trading-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: develop-demo-trading-web
    namespace: develop
    labels:
        app: develop-demo-trading-web
spec:
    selector:
        matchLabels:
            app: develop-demo-trading-web
    replicas: 1
    strategy:
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: develop-demo-trading-web
        spec:
            containers:
                - name: develop-demo-trading-web
                  image: dockerhub.finhay.lan/develop-demo-trading-web:0.0
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3000
                  # envFrom:
                  # - secretRef:
                  #     name: develop-demo-trading-web
                  #         env:
                  #            - name: ENV_PRODUCT_RUN_ON
                  #              value: "develop"
                  resources:
                      # requests ⇒ set minimum required resources when creating pods
                      requests:
                          # 250m ⇒ 0.25 CPU
                          cpu: 100m
                          memory: 256Mi
                      # set maximum resorces
                  #          limits:
                  #           cpu: 1000m
                  #           memory: 2048Mi
                  volumeMounts:
                      - name: tz-config
                        mountPath: /etc/localtime
            volumes:
                - name: tz-config
                  hostPath:
                      path: /usr/share/zoneinfo/Asia/Ho_Chi_Minh
            nodeSelector:
                k8spool: finhay-all-service
---
apiVersion: v1
kind: Service
metadata:
    name: develop-demo-trading-web
    namespace: develop
spec:
    selector:
        app: develop-demo-trading-web
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: develop-demo-trading-web
    namespace: develop
spec:
    rules:
        - host: 'dev-alpha.vinasecurities.com'
          http:
              paths:
                  - path:
                    backend:
                        serviceName: develop-demo-trading-web
                        servicePort: 3000
