http-service-on-k8s/product-demo-trading-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-demo-trading-web
  namespace: products
  labels:
    app: products-demo-trading-web
spec:
  selector:
    matchLabels:
      app: products-demo-trading-web
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: products-demo-trading-web
    spec:
      containers:
      - name: products-demo-trading-web
        image: dockerhub.vnsc.local/products-demo-trading-web:1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        # envFrom:
        # - secretRef:
        #     name: products-demo-trading-web
        # env:
        #    - name: ENV_PRODUCT_RUN_ON
        #      value: "products"
        resources:
         # requests ⇒ set minimum required resources when creating pods
          requests:
           # 250m ⇒ 0.25 CPU
           cpu: 250m
           memory: 512Mi
         # set maximum resorces
#          limits:
#           cpu: 1000m
#           memory: 2048Mi
        # volumeMounts:
        #   - mountPath: /home/node/app/.env
        #     subPath: .env
        #     name: products-demo-trading-web
        #     readOnly: true
          - name: tz-config
            mountPath: /etc/localtime
      volumes:
        # - name: products-demo-trading-web
        #   secret:
        #     secretName: products-demo-trading-web
        #     items:
        #       - key: .env
        #         path: .env
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Ho_Chi_Minh
      nodeSelector:
        vnsc-pool1: all-service
---
apiVersion: v1
kind: Service
metadata:
  name: products-demo-trading-web
  namespace: products
spec:
  selector:
    app: products-demo-trading-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name:  products-demo-trading-web
  namespace: products
spec:
  rules:
  - host: "alpha.vinasecurities.com"
    http:
      paths:
        - path:
          backend:
            serviceName: products-demo-trading-web
            servicePort: 3000
